--- a/meme_space/src/index.css
+++ b/meme_space/src/index.css
@@ -41,3 +41,16 @@ input[type="range"]::-ms-thumb {
   box-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
   cursor: pointer;
 }
+
+*::-webkit-scrollbar {
+  width: 2px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #d9d9d931;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #fcaf54;
+  border: 1px solid #fcaf54;
+}
